Components module created

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -6,18 +6,19 @@
             <!-- Breadcrumbs -->
             <app-breadcrumbs></app-breadcrumbs>
 <!-- Routes -->
+<router-outlet></router-outlet>
 <!-- ============================================================== -->
                 <!-- Start Page Content -->
                 <!-- ============================================================== -->
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body">
-                               <router-outlet></router-outlet>
+                               
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- ============================================================== -->
                 <!-- End PAge Content -->
                 <!-- ============================================================== -->
