--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,34 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+               <h4 class="card-title">Striped progress</h4>
+               <div class="progress m-t-20">
+                <div class="progress-bar bg-primary progress-bar-striped active" 
+                     style="height:10px;" 
+                 
+                     role="progressbar">
+                    
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+               <app-incrementer></app-incrementer>
+            </div>
+        </div>
+    </div>
+       <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementer></app-incrementer>
+            </div>
+        </div>
+    </div>
+</div>
