--- a/src/app/components/incrementer/incrementer.component.html
+++ b/src/app/components/incrementer/incrementer.component.html
@@ -1,6 +1,7 @@
 <div class="input-group">
     <span class="input-group-btn">
-        <button class="btn btn-primary" 
+        <button 
+                [ngClass]="btnClass"
                 type="button" 
                 (click)="changeValue(-5)">
             <i class="fa fa-minus"></i>
@@ -12,7 +13,8 @@
             [(ngModel)]="progress"
             >
     <span class="input-group-btn">
-        <button class="btn btn-primary" 
+        <button 
+                [ngClass]="btnClass"
                 type="button" 
                 (click)="changeValue(5)">
             <i class="fa fa-plus"></i>
