--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
                                 <li><a href="javascript:void()">My Balance</a></li>
                                 <li><a href="javascript:void()">Inbox</a></li>
                                 <li><a routerLink="account-settings"  >Account Setting</a></li>
-                                <li><a href="javascript:void()">Logout</a></li>
+                                <li><a routerLink="/login">Logout</a></li>
                             </ul>
                         </li>
                         <li class="nav-devider"></li>
