--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -272,7 +272,8 @@
                                     <li role="separator" class="divider"></li>
                                     <li><a routerLink="account-settings"><i class="ti-settings"></i> Account Setting</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="#"><i class="fa fa-power-off"></i> Logout</a></li>
+                                    
+                                    <li><a routerLink="/login"><i class="fa fa-power-off"></i> Logout</a></li>
                                 </ul>
                             </div>
                         </li>
