Rxjs component created

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -32,7 +32,11 @@
                             </a>
                             <ul aria-expanded="false" class="collapse">
                                 <li *ngFor="let submenu of item.submenu">
-                                    <a [routerLink]="submenu.url">{{submenu.title}} </a>
+                                    <a 
+                                    [routerLink]="submenu.url" 
+                                    routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact:true}"
+                                    >{{submenu.title}} </a>
                                 </li>
                                 
                             </ul>
