--- a/src/app/shared/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/breadcrumbs/breadcrumbs.component.html
@@ -3,15 +3,15 @@
                 <!-- ============================================================== -->
                 <div class="row page-titles">
                     <div class="col-md-5 align-self-center">
-                        <h3 class="text-themecolor">Blank Page</h3>
+                        <h3 class="text-themecolor">{{title}}</h3>
                     </div>
                     <div class="col-md-7 align-self-center">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item">
                                 <a href="javascript:void(0)">Home</a>
                             </li>
-                            <li class="breadcrumb-item">pages</li>
-                            <li class="breadcrumb-item active">Blank Page</li>
+                            <li class="breadcrumb-item">{{title}}</li>
+                            <li class="breadcrumb-item active"> </li>
                         </ol>
                     </div>
                     <!-- <div>
