--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -39,6 +39,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col text-danger">
+                            <p *ngIf="validField('name')">Name is not valid</p>
+                            <p *ngIf="validField('email')">Email is not valid</p>
+                            <p *ngIf="termsAccepted()">You should accpet terms</p>
+                            
+                        </div>
+                    </div>
                     <div class="form-group text-center m-t-20">
                         <div class="col-xs-12">
                             <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Sign Up</button>
