--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-#themecolors .selector {
+#themecolors .selector, .cursor {
     cursor: pointer;
+}
+
+#google-btn  {
+    align-items: center;
+    display:flex;
+    justify-content: center;
+    text-align: center;
 }
