--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
                             <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img [src]="imgUrl" alt="user" /><span class="hide-menu">
                                 {{userName}} </span></a>
                             <ul aria-expanded="false" class="collapse">
-                                <li><a href="javascript:void()">My Profile </a></li>
+                                <li><a routerLink="./profile"routerLinkActive="active">My Profile </a></li>
                                 <li><a href="javascript:void()">My Balance</a></li>
                                 <li><a href="javascript:void()">Inbox</a></li>
                                 <li><a routerLink="account-settings"  >Account Setting</a></li>
