--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -4,25 +4,28 @@
             <div class="card-body">
                 <h4 class="card-title">Profile</h4>
                 <h6 class="card-subtitle">Settings</h6>
-                <form class="form p-t-20">
+                <form class="form p-t-20"
+                (ngSubmit)="updateProfile()"
+                [formGroup]="profileForm"
+                >
                     <div class="form-group">
                         <label for="exampleInputuname2">User Name</label>
                         <div class="input-group">
-                            <input type="text" class="form-control" id="exampleInputuname2" placeholder="Username">
+                            <input formControlName="name" type="text" class="form-control" id="exampleInputuname2" placeholder="Username">
                             <div class="input-group-addon"><i class="ti-user"></i></div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail2">Email address</label>
                         <div class="input-group">
-                            <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter email">
+                            <input formControlName="email" type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter email">
                             <div class="input-group-addon"><i class="ti-email"></i></div>
                         </div>
                     </div>
                 
                     
                     <div class="text-left">
-                        <button type="submit" class="btn btn-success waves-effect waves-light m-r-10">Save changes</button>
+                        <button type="submit" [disabled]="profileForm.invalid" class="btn btn-success waves-effect waves-light m-r-10">Save changes</button>
                         
                     </div>
                 </form>
