--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -8,8 +8,8 @@
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav">
                         <li class="user-profile">
-                            <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img [src]="imgUrl" alt="user" /><span class="hide-menu">
-                                {{userName}} </span></a>
+                            <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img [src]="user.imgUrl" alt="user" /><span class="hide-menu">
+                                {{user.name}} </span></a>
                             <ul aria-expanded="false" class="collapse">
                                 <li><a routerLink="./profile"routerLinkActive="active">My Profile </a></li>
                                 <li><a href="javascript:void()">My Balance</a></li>
