--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -23,7 +23,8 @@
 
                         <li *ngFor="let item of menuItems">
                              <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-                                <i class="mdi mdi-gauge"></i>
+                                <i [class]="item.icon"></i>
+                                <!-- <i class="{{item.icon}}"></i> -->
                                 <span class="hide-menu">
                                     {{item.title}} 
                                     <span class="label label-rouded label-themecolor pull-right">
