Avatar in users

--- a/src/app/pages/admin/users/users.component.html
+++ b/src/app/pages/admin/users/users.component.html
@@ -33,17 +33,18 @@
                                 <table class="table table-striped">
                                     <thead>
                                         <tr>
-                                            <th>Avatar</th>
+                                            <th class="w100">Avatar</th>
                                             <th>Email</th>
                                             <th>Name</th>
-                                            <th>Role</th>
-                                            <th>Auth</th>
-                                            <th class="text-nowrap">Actions</th>
+                                            <th class="w100" >Role</th>
+                                            <th class="w100">Auth</th>
+                                            <th class="text-nowrap w100">Actions</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr *ngFor="let user of users">
-                                            <td>Imagen {{user.imgUrl}}</td>
+                                            <td class="text-center"> <img [src]="user.imgUrl" alt="User Avatar" class="avatar">
+                                                </td>
                                             <td>{{user.email}}</td>
                                             <td>{{user.name}}</td>
                                             <td>{{user.role}}</td>
