--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,11 @@
     width: 200px;
     height: 200px;
 }
+.w100 {
+    width: 100px;
+}
+.avatar{
+    border: 1px solid gray ;
+    border-radius: 100%;
+    width: 45px;
+}
