--- a/src/app/pages/admin/users/users.component.html
+++ b/src/app/pages/admin/users/users.component.html
@@ -11,7 +11,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="row  animated fadeIn fast">
+                <div 
+                *ngIf="loading"
+                class="row  animated fadeIn fast"
+                
+                >
                     <div class="col-12">
                      <div class="alert alert-info text-center" role="alert" >
                         <h4 class="alert-heading">Loading</h4>
@@ -23,7 +27,8 @@
                 <div class="row">
 
                 
-                <div class="col-12">
+                <div *ngIf="!loading"
+                class="col-12">
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Users {{totalUsers}} - {{from}}</h4>
@@ -59,7 +64,7 @@
                                                 </div>
                                             </td>
                                             <td>May 15, 2015</td> -->
-                                            <td class="text-nowrap">
+                                            <td class="text-nowrap text-center">
                                                 <a href="#" data-toggle="tooltip" data-original-title="Edit"> <i class="fa fa-pencil text-inverse m-r-10"></i> </a>
                                                 <a href="#" data-toggle="tooltip" data-original-title="Delete"> <i class="fa fa-close text-danger"></i> </a>
                                             </td>
