User can be deleted

--- a/src/app/pages/admin/users/users.component.html
+++ b/src/app/pages/admin/users/users.component.html
@@ -68,7 +68,11 @@
                                             <td>May 15, 2015</td> -->
                                             <td class="text-nowrap text-center">
                                                 <a href="#" data-toggle="tooltip" data-original-title="Edit"> <i class="fa fa-pencil text-inverse m-r-10"></i> </a>
-                                                <a href="#" data-toggle="tooltip" data-original-title="Delete"> <i class="fa fa-close text-danger"></i> </a>
+                                                <a 
+                                                class="cursor"
+                                                (click)="deleteUser(user)"
+                                                 data-toggle="tooltip" 
+                                                 data-original-title="Delete"> <i class="fa fa-close text-danger"></i> </a>
                                             </td>
                                         </tr>
                                     </tbody>
