--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,16 @@
     border-radius: 100%;
     width: 45px;
 }
+.background-modal-image{
+    background-color: rgba(0,0,0,0.4);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+
+}
+.hidden{
+    display: none;
+}
